Fix content full bleed in timeline list.

--- a/src/app/components/timeline-list/timeline-list.styl
+++ b/src/app/components/timeline-list/timeline-list.styl
@@ -14,6 +14,7 @@
 	// For doing a full-bleed within the content.
 	&-full-bleed
 		margin-left: -(($icon-size / 2) + $avatar-margin)
+		margin-right: @margin-left
 
 	&-item
 		position: relative
